# Dominator

./: .gitignore  QUICKSTART.md  README.md  bootstrap.sh  config.yaml.example  pyproject.toml
domain_manager/: __init__.py  cli.py  config.py  runner.py
domain_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
domain_manager/ad/: __init__.py  client.py  importers.py  policies.py
domain_manager/ansible/: runner.py
domain_manager/certs/: checker.py
domain_manager/db/: __init__.py  models.py  queries.py
domain_manager/dhcp/: client.py
domain_manager/installers/: __init__.py  base.py  dhcp_kea.py  docker.py  firewall.py  manager.py  monitoring.py  pihole.py  postgres.py  samba_dc1.py  samba_dc2.py  zabbix.py
domain_manager/notifications/: sender.py
domain_manager/pihole/: client.py
domain_manager/prometheus/: client.py
domain_manager/snmp/: client.py
domain_manager/web/: __init__.py  _audit.py  _demo_seed.py  _templates.py  app.py
domain_manager/web/routes/: __init__.py  ansible.py  audit.py  auth.py  backup.py  certs.py  computers.py  dashboard.py  dhcp.py  groups.py  health.py  help.py  pihole_ui.py  plans.py  policies.py  snmp_devices.py  users.py
domain_manager/web/templates/: ansible.html  ansible_action_panel.html  ansible_editor.html  ansible_job.html  ansible_output_fragment.html  audit.html  backup.html  base.html  certs.html  computer_detail.html  computer_internet_fragment.html  dhcp.html  (+20 more)
examples/: computers.csv  groups.csv  users.csv
examples/playbooks/: backup_full.yml  backup_samba.yml  unblock_internet.yml
(+7 files in other folders)
